--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,10 @@
-@import url("components/profile_header.css");
-@import url("fonts/avenir.css");
 body {
   border: 20px solid #FFF;
-  background-color: #f5f5f5;
-  padding: 30px;
+  background-color: #F6F6F6;
   margin: 0;
-}
-h1, h2, h3 {
+  line-height: 1;
   font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
 }
 a {
   text-decoration: none;
@@ -15,13 +12,33 @@ a {
 }
 a:hover {
   color: #F24A4B;
+  text-decoration: none;
 }
 ul { list-style: none; }
+hr { margin-top: 5px !important; }
+.back-to-top {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: block;
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  font-size: 24px;
+  text-align: center;
+  /* color: #FFF; */
+  border-radius: 4em;
+  backface-visibility: hidden;
+  overflow: hidden;
+  /* background: #F24A4B; */
+  cursor: pointer;
+  z-index: 1000;
+}
 .text-pink { color: #F24A4B; }
-.navbar {
+.nav-bar {
   display: flex;
   justify-content: space-between;
-  height: 150px;
+  height: 58px;
 }
 .logo {
   font-family: 'Abril Fatface', cursive;
@@ -29,84 +46,110 @@ ul { list-style: none; }
   line-height: 40px;
   color: #F24A4B;
 }
-.navbar-links {
-  font-family: 'Montserrat', sans-serif;
+.nav-bar-links-container {
   font-size: 20px;
   display: flex;
   flex-direction: column;
   text-align: right;
   font-weight: 700;
 }
-.navbar-links a {
-  margin-bottom: 5px;
+.nav-bar-link {
+  margin-bottom: 3px;
   letter-spacing: 0.5px;
 }
-.avatar {
-  height: 140px;
+.home-container, .nav-bar-container, .container {
+  font-size: 14px;
+  line-height: 22px;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: 2px;
+  text-align: center;
+  margin: auto;
+}
+.home-container, .nav-bar-container {
+  padding: 20px;
+}
+.home-container {
+  height: calc(100vh - 40px);
+}
+.about-container {
+  height: fit-content;
   position: absolute;
+  top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
 }
-.container {
-  /* display: flex;
-  align-content: center;
-  justify-content: center; */
-  font-size: 16px;
-  font-family: 'Montserrat', sans-serif;
+.links-container {
   line-height: 25px;
   font-style: normal;
   font-weight: 600;
   letter-spacing: 3px;
-  text-transform: uppercase;
-  text-align: center;
-  margin: auto;
+  font-size: 10px;
+  margin-top: 0.5rem;
 }
-
-.content {
-  width: 100%;
-  height: 100vh;
-  overflow: scroll;
+.links-container img {
+  width: 20px;
+  margin: 0 5px;
 }
-
-.section-white {
-  background-color: white;
-/*  margin: 25px;*/
-/*  border-radius: 15px;*/
-}
-
-.text-center {
-  text-align: center;
-}
-
-.list-inline li {
-  display: inline;
-  padding: 0 20px;
-}
-
-.list-inline {
-  margin: 0;
-  padding-left: 0;
-}
-
-.social:hover {
+.links-container a:hover {
   opacity: 0.6;
 }
-
-#about-me {
-  padding: 40px 50px;
+.avatar {
+  height: 140px;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-#page-content {
-  margin-left: 115px;
+/* .header {
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  color: #F24A4B;
+} */
+#work {
+  padding: 50px 20px;
 }
-
-#places img {
-   max-width:100%;
-   height:auto;
-   max-height:100%;
+/* #work .row { margin-bottom: 80px; } */
+.work-description {
+  padding: 20px 0;
 }
-
+.details-link {
+  font-size: 10px;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+.details-container {
+  color: #F6F6F6;
+  height: 0px;
+  -webkit-transition:height, 0.5s linear;
+  -moz-transition: height, 0.5s linear;
+  -ms-transition: height, 0.5s linear;
+  -o-transition: height, 0.5s linear;
+  transition: height, 0.5s linear;
+  font-family: 'Nunito', sans-serif;
+  text-transform: initial;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+}
+.details-container.show {
+  color: #000;
+  height: 200px;
+  -webkit-transition:height, 0.5s linear;
+  -moz-transition: height, 0.5s linear;
+  -ms-transition: height, 0.5s linear;
+  -o-transition: height, 0.5s linear;
+  transition: height, 0.5s linear;
+}
+.play-container {
+  margin-top: 5rem;
+}
+.play-container img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
 /* @media (max-width: 960px) {
   .container {
     width: 700px;
