--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,10 @@ a:hover {
   text-decoration: none;
 }
 ul { list-style: none; }
-hr { margin-top: 5px !important; }
-.back-to-top {
+.btt {
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 35px;
+  right: 35px;
   display: block;
   width: 44px;
   height: 44px;
@@ -38,12 +37,11 @@ hr { margin-top: 5px !important; }
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  height: 58px;
 }
 .logo {
   font-family: 'Abril Fatface', cursive;
-  font-size: 50px;
-  line-height: 40px;
+  font-size: 40px;
+  line-height: 32px;
   color: #F24A4B;
 }
 .nav-bar-links-container {
@@ -77,11 +75,11 @@ hr { margin-top: 5px !important; }
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
-  right: 0;
+  left: 40px;
+  right: 40px;
   margin: auto;
 }
-.links-container {
+.links-container, .location-text {
   line-height: 25px;
   font-style: normal;
   font-weight: 600;
@@ -107,10 +105,6 @@ hr { margin-top: 5px !important; }
   letter-spacing: 0.5px;
   color: #F24A4B;
 } */
-#work {
-  padding: 50px 20px;
-}
-/* #work .row { margin-bottom: 80px; } */
 .work-description {
   padding: 20px 0;
 }
@@ -142,13 +136,24 @@ hr { margin-top: 5px !important; }
   -o-transition: height, 0.5s linear;
   transition: height, 0.5s linear;
 }
-.play-container {
+/* .play-container {
   margin-top: 5rem;
+} */
+.play-container hr {
+  height: 2px;
+  background: #F24A4B;
+  width: 100px;
+  margin-top: 35px;
+  margin-bottom: 40px;
 }
 .play-container img {
   width: 100%;
-  height: 500px;
+  height: 450px;
   object-fit: cover;
+}
+@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
 }
 /* @media (max-width: 960px) {
   .container {
@@ -159,9 +164,18 @@ hr { margin-top: 5px !important; }
   .container {
     width: 500px;
   }
-}
+}*/
 @media (max-width: 540px) {
-  .container {
-    width: 300px;
+  .logo {
+    font-size: 30px !important;
+    line-height: 23px !important;
   }
-} */
+  .avatar { height: 110px !important; }
+  .home-container {
+    font-size: 13px !important;
+    line-height: 20px !important;
+  }
+  .links-container { line-height: 18px !important; }
+  .about-container { top: 100px !important; }
+  .play-container { margin-top: 20px; }
+}
