--- a/css/style.css
+++ b/css/style.css
@@ -126,10 +126,31 @@ ul { list-style: none; }
 .work-container {
   margin-bottom: 80px;
 }
-.project-link:hover {
-  color: #F24A4B;
-  font-size: 16px;
+.project-webpages {
+  display: flex;
+  justify-content: center;
+}
+.project-webpage {
+  font-size: 12px;
+  margin: 0 20px;
   cursor: pointer;
+  line-height: 18px;
+  position: relative;
+}
+.project-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+.project-name {
+  margin-top: .5rem;
+  font-weight: 500;
+  text-transform: initial;
+  letter-spacing: 1px;
 }
 .project-title {
   font-size: 24px;
@@ -148,21 +169,18 @@ ul { list-style: none; }
   text-align: left;
   margin-bottom: 2rem;
 }
-.project-close img { width: 20px; }
+.flip-hor {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  width: 15px;
+  margin: 0 10px;
+}
 @viewport {
   width: device-width ;
   zoom: 1.0 ;
 }
-/* @media (max-width: 960px) {
-  .container {
-    width: 700px;
-  }
-}
-@media (max-width: 720px) {
-  .container {
-    width: 500px;
-  }
-}*/
 @media (max-width: 540px) {
   .logo {
     font-size: 30px !important;
@@ -171,9 +189,11 @@ ul { list-style: none; }
   .avatar { height: 110px !important; }
   .home-container {
     font-size: 13px !important;
-    line-height: 20px !important;
+    /* line-height: 20px !important; */
   }
   .links-container { line-height: 18px !important; }
   .about-container { top: 100px !important; }
   .play-container, .work-container { margin-top: 20px; }
+  .project-webpages { flex-direction: column; }
+  .project-webpage { margin-bottom: 30px; }
 }
