--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,12 @@ ul { list-style: none; }
   font-weight: 700;
   letter-spacing: 1.5px;
 }
-.project-image { width: 100%; }
+.project-subheading {
+  font-size: 12px;
+  font-weight: 400;
+  margin-top: 5px;
+  letter-spacing: 2px;
+}
 .project-blurb, .project-stack, .project-spec {
   font-weight: 500;
   text-transform: initial;
