--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,6 @@ ul { list-style: none; }
   margin-left: auto;
   margin-right: auto;
 }
-.work-description {
-  padding: 20px 0;
-}
 .pink-hr {
   height: 2px;
   background: #F24A4B;
@@ -107,6 +104,7 @@ ul { list-style: none; }
   margin-top: 35px;
   margin-bottom: 40px;
 }
+.play-container, .work-container { margin-top: 20px; }
 .play-container img {
   width: 100%;
   height: 450px;
@@ -187,7 +185,7 @@ ul { list-style: none; }
   .home-container { font-size: 13px !important; }
   .links-container { line-height: 18px !important; }
   .about-container { top: 100px !important; }
-  .play-container, .work-container { margin-top: 20px; }
+  /* .play-container, .work-container { margin-top: 20px; } */
   /* .project-webpages { flex-direction: column; } */
   .project-webpage { margin-bottom: 30px; }
 }
